more features added

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by Ashish. It uses data from mapbox.com and weatherstack.com.</p>
-        <img class="portrait" src="/img/photo.jpg">
+        <img class="portrait" src="/img/photo.jpg" width="200px">
     </div>
     {{>footer}}
 </body>
