--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,39 @@
 </form>
 <p id="message-1"></p>
 <p id="message-2"></p>
+<table>
+ 
+  <tr>
+    <td>City</td>
+    <td ><p id="city"></p></td>
+   
+  </tr>
+  <tr>
+    <td>Current Temperature &#8451;</td>
+    <td ><p id="temp"></p></td>
+   
+  </tr>
+  <tr>
+    <td>Rain Chance(%)</td>
+    <td ><p id="rain"></p></td>
+    
+  </tr>
+  <tr>
+    <td>Weather Type</td>
+    <td ><p id="weather"></p></td>
+   
+  </tr>
+  <tr>
+    <td>Humidity</td>
+    <td ><p id="humidity"></p></td>
+   
+  </tr>
+  <tr>
+    <td>Wind speed(Direction)</td>
+    <td ><p id="speed"></p></td>
+    
+  </tr>
+</table>
   </div>
   
   {{>footer}}
