--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,3 +53,20 @@ button{
     color: white;
     padding: 10px;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    width: 50%;
+  }
+  
+  tr:nth-child(odd) {
+    background-color: #dddddd;
+  }
